--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -289,6 +289,10 @@ Editor for files in a project
 
 .salvus-editor-chat-new-chats {
     color:orange;
+    padding-right: 1ex;
+}
+.salvus-editor-chat-no-new-chats {
+    padding-right: 1ex;
 }
 
 
