fix github issue: IPython File uploded not updating #104

--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -395,7 +395,7 @@ Editor for files in a project
 }
 
 .salvus-ipython-notebook-status-messages {
-    font-size: 10px;
+    font-size: 10pt;
 }
 
 .salvus-ipython-notebook-danger {
