--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -1,3 +1,23 @@
 .salvus-project-tasks-new {
     background-color:white;
 }
+
+.salvus-project-task {
+    background-color: white;
+    padding-left: 1ex;
+    padding-bottom: 1ex;
+    padding-right: 0em;
+    padding-top: 2ex;
+    cursor : pointer;
+    border-top: 1px solid #ccc;
+}
+
+
+.salvus-project-task:hover {
+    background-color:#efe;
+}
+
+.salvus-project-tasks-title-edit {
+    width: 98%
+}
+
