--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -5,11 +5,10 @@
 .salvus-task {
     background-color: white;
     padding-left: 1ex;
-    padding-bottom: 1ex;
+    padding-bottom: 0ex;
     padding-right: 0em;
-    padding-top: 2ex;
+    padding-top: 1ex;
     cursor : pointer;
-    border-top: 1px solid #ccc;
     border-left: 2px solid #fff;
 }
 
@@ -41,4 +40,11 @@
 .salvus-current-task {
     border-left: 2px solid #08c;
 }
+
+.salvus-tasks-search-describe {
+    margin-top: 4px;
+    font-size: 14pt;
+    padding-bottom: 1em;
+}
+
 
