--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -10,6 +10,8 @@
     padding-top: 1ex;
     cursor : pointer;
     border-left: 2px solid #fff;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
 }
 
 
