tasks: rewrote everything to use syncdb files instead of cassandra database.

--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -49,4 +49,10 @@
     padding-bottom: 1em;
 }
 
+.salvus-new-task-cm-editor {
+    margin-bottom: 1em;
+    border : 2px solid #ccc;
+    height : 4em;
+}
+
 
