--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -19,6 +19,9 @@
     background-color:#efe;
 }
 
+.salvus-task-done {
+}
+
 .salvus-task-title:hover {
     cursor : text;
     color : #000;
@@ -51,9 +54,18 @@
 
 .salvus-new-task-cm-editor {
     margin-bottom: 1em;
-    border : 2px solid #ccc;
     min-height : 2em;
     height: auto;
+    padding-left: 1ex;
+    padding-right: 1ex;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
+}
+
+.salvus-new-task-cm-editor-focus {
+    border-color: #51a7e8;
+    box-shadow: inset 0 0 5px rgba(81,167,232,0.5);
 }
 
 .salvus-new-task-cm-scroll {
