tasks: way to indicate currently **active task(s)**, i.e., tasks we are working on.

--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -78,3 +78,20 @@
     margin-bottom:2em;
 }
 
+.salvus-task-current {
+    margin-left: 1ex;
+    color: #bbb;
+}
+
+.salvus-task-current:hover {
+    color: #3d3;
+}
+
+.salvus-task-current-active {
+    color: #3d3;
+}
+
+.salvus-task-current-active:hover {
+    color: #bbb;
+}
+
