tasks: use **codemirror** with md syntax highlighting when editing task title

--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -84,11 +84,11 @@
 }
 
 .salvus-task-active-icon:hover {
-    color: green;
+    color: #3f3;
 }
 
 .salvus-task-active-icon-active {
-    color: green;
+    color: #3f3;
 }
 
 .salvus-task-active-icon-active:hover {
