tasks: make active task have a lightyellow background.

--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -114,6 +114,10 @@
     color: orange;
 }
 
+.salvus-task-is_active {
+    background: lightyellow;
+}
+
 .salvus-task-active-button {
     padding-left: 1em;
 }
