tasks: search highlighting

--- a/salvus/page/index.css
+++ b/salvus/page/index.css
@@ -149,3 +149,8 @@ body { padding-top:41px; }
        -moz-box-sizing: border-box;
             box-sizing: border-box;
 }
+
+
+.highlight {
+    background-color: orange;
+}
