tasks: save button when editing tasks.

--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -68,7 +68,7 @@
 }
 
 .salvus-new-task-cm-editor {
-    margin-bottom: 1em;
+    margin-bottom: 1ex;
     min-height : 2em;
     height: auto;
     padding-left: 1ex;
