--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -9,10 +9,7 @@
     padding-right: 0em;
     padding-top: 1ex;
     cursor : pointer;
-    border-top: 1px solid lightgrey;
-    border-bottom: 1px solid lightgrey;
-    border-left: 3px solid lightgrey;
-    border-right: 3px solid lightgrey;
+    border: 1px solid lightgrey;
     border-radius: 1ex;
     width: 98%;
 }
@@ -59,7 +56,7 @@
 }
 
 .salvus-current-task {
-    border-left: 3px solid #08c;
+    border: 1px solid #08c;
 }
 
 .salvus-tasks-search-describe {
