--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -98,6 +98,10 @@
     padding-right: 10px;
 }
 
+.salvus-task-header-current {
+    font-weight: bold;
+}
+
 .salvus-tasks-list {
     overflow-y:auto;
     margin-bottom:2em;
