--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -48,7 +48,7 @@
 }
 
 .salvus-task-icon-done-box {
-    font-size:14pt;
+   font-size:13pt;
 }
 
 
@@ -192,4 +192,11 @@
     cursor : pointer;
 }
 
+.salvus-tasks-hash {
+    cursor : pointer;
+}
+
+.salvus-tasks-hash:hover {
+    background-color: #2a85a0;
+}
 
