tasks: change when marking a task done to store the timestamp of when done, rather than just that done

--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -156,6 +156,12 @@
     color:#08c;
 }
 
+.salvus-task-done {
+    color:#888;
+    font-size:10pt;
+}
+
+
 .salvus-task-overdue {
     background: red;
     color: white;
