tasks: more ui cleanup

--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -62,8 +62,8 @@
 
 .salvus-tasks-search-describe {
     margin-top: 4px;
-    font-size: 14pt;
-    padding-bottom: 1ex;
+    font-size: 13pt;
+    padding-bottom: 4px;
 }
 
 .salvus-new-task-cm-editor {
