tasks: improve hashtag style and only show visible tags.

--- a/salvus/page/index.css
+++ b/salvus/page/index.css
@@ -153,6 +153,9 @@ body { padding-top:41px; }
 
 .highlight {
     background-color: orange;
+    padding: 3px;
+    margin: -3px;
+    border-radius: 3px;
 }
 
 
