UI: make it clearer when the connection is bad.

--- a/salvus/page/top_navbar.css
+++ b/salvus/page/top_navbar.css
@@ -20,6 +20,10 @@
     margin-right: 1ex;
 }
 
+.salvus-connection-status-protocol-bad {
+    color : #f55;
+}
+
 .salvus-top_navbar {
     font-size: 14px;
 }
