--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -44,7 +44,7 @@
 }
 
 .salvus-task-icon-done-box {
-    font-size:17pt;
+    font-size:15pt;
     color:#888;
 }
 
@@ -108,6 +108,8 @@
     overflow-y:auto;
     overflow-x:hidden;
     margin-bottom:2em;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .salvus-task-reorder-handle {
@@ -195,16 +197,23 @@
 
 
 .salvus-tasks-hash {
-    background-color: #2f96b4;
-    color: white;
-    padding: 3px;
-    border-radius: 3px;
-    cursor : pointer;
+    background-color : #2f96b4;
+    color            : white;
+    padding          : 3px;
+    border-radius    : 3px;
+    cursor           : pointer;
 }
 
 
 .salvus-tasks-hash:hover {
     background-color: #2a85a0;
+}
+
+.salvus-tasks-hashtags {
+    overflow-x : auto;
+    max-height : 3em;
+    padding    : 6px;
+    margin     : 0px;
 }
 
 .salvus-tasks-first {
