tasks: greatly optimize rendering and many other things.

--- a/salvus/page/index.css
+++ b/salvus/page/index.css
@@ -158,7 +158,12 @@ body { padding-top:41px; }
     border-radius: 3px;
 }
 
+/* fix bootstrap ugliness */
 
 code  {
     color: #444;
+}
+
+blockquote p {
+    font-size: 15px;
 }
