tasks: make it so failure to save/sync due to bad network is clear

--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -100,6 +100,7 @@
 
 .salvus-tasks-list-heading {
     padding-left: .8ex;
+    padding-bottom: .5ex;    
     font-size: 11pt;
     cursor: pointer;
 }
