tasks: fullscreen support

--- a/salvus/page/top_navbar.css
+++ b/salvus/page/top_navbar.css
@@ -53,6 +53,7 @@
     padding:4px;
     color: #999;
     font-weight: bold;
+    background-color: #eee;
 }
 
 .salvus-fullscreen-deactivate:hover {
