--- a/salvus/page/top_navbar.css
+++ b/salvus/page/top_navbar.css
@@ -8,20 +8,48 @@
 }
 
 .navbar-big {
-    font-size:18px;
+    font-size: 18px;
+}
+
+.nav.buttons {
+    margin: 0;
+}
+
+.nav-projects-placeholder {
+    -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+    -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+    box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+}
+
+.nav.projects li.ui-sortable-helper {
+    color: #555555;
+    text-decoration: none;
+    background-color: #ffffff;
+    -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+    -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+    box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+}
+
+.nav.pull-right {
+    float: right;
+}
+
+.nav.projects {
+    float: none;
+    overflow: hidden;
 }
 
 .salvus-connection-status {
-    width       : 6.5em;
-    font-size   : 10pt;
-    line-height : 10pt;
-    cursor      : default;
-    margin-top  : 2ex;
+    width: 6.5em;
+    font-size: 10pt;
+    line-height: 10pt;
+    cursor: default;
+    margin-top: 2ex;
     margin-right: 1ex;
 }
 
 .salvus-connection-status-protocol-bad {
-    color : #f55;
+    color: #f55;
 }
 
 .salvus-top_navbar {
@@ -29,12 +57,12 @@
 }
 
 .salvus-fullscreen-activate {
-    position:fixed;
-    z-index:100000;
-    right:0;
-    top:0;
+    position: fixed;
+    z-index: 100000;
+    right: 0;
+    top: 0;
     font-size: 12pt;
-    padding:4px;
+    padding: 4px;
     color: #999;
     font-weight: bold;
 }
@@ -43,14 +71,13 @@
     color: #222;
 }
 
-
 .salvus-fullscreen-deactivate {
-    position:fixed;
-    z-index:100000;
-    right:0;
-    top:0;
-    font-size:12pt;
-    padding:4px;
+    position: fixed;
+    z-index: 100000;
+    right: 0;
+    top: 0;
+    font-size: 12pt;
+    padding: 4px;
     color: #999;
     font-weight: bold;
     background-color: #eee;
@@ -68,13 +95,11 @@
     position: relative;
 }
 
-
 .salvus-connection-status-connecting {
-    background-color : red;
-    color            : white;
-    padding          : 1ex;
-    z-index          : 100001;
-
+    background-color: red;
+    color: white;
+    padding: 1ex;
+    z-index: 100001;
 }
 
 .salvus-connection-status:hover {
