--- a/salvus/page/top_navbar.css
+++ b/salvus/page/top_navbar.css
@@ -108,3 +108,12 @@
 .salvus-connection-status:hover {
     color: #222
 }
+
+.top_navbar-button-link {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.top_navbar-button-template {
+    white-space: nowrap;
+}
