--- a/salvus/page/project.css
+++ b/salvus/page/project.css
@@ -6,7 +6,14 @@
     margin-top: 0;
     top: 40px;
 }
+.first-entry {
+    background-color: #08c;        
+}
 
+.first-entry * {
+    color: #fff !important;
+    background-color: #08c;
+}
 
 .project-activity-well {
     background-color:white;
@@ -18,7 +25,7 @@
 
 .project-activity-entry {
     border-bottom: 1px solid #bbb;
-    margin-top: 1ex;
+    padding-top: 1ex;
 }
 
 .project-disk_usage {
