change sagews to render  markedown using marked and md message -- snapshot; still need to update sagews2pdf.py

--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -336,6 +336,10 @@ Editor for files in a project
     padding-right:2em;*/
 }
 
+.sagews-output-md {
+    font-family:helvetica;
+}
+
 .sagews-output-stdout {
     white-space: pre;
 }
