--- a/salvus/page/tasks.css
+++ b/salvus/page/tasks.css
@@ -19,6 +19,10 @@
     margin-top: 3px;
 }
 
+.highlight-tag {
+    background-color: orange !important;
+    margin: 0px;
+}
 
 .salvus-task:hover {
     background-color:#efe;
