--- a/salvus/page/editor.css
+++ b/salvus/page/editor.css
@@ -5,7 +5,7 @@ Editor for files in a project
 */
 
 .salvus-editor-content {
-    position: fixed;
+    position: absolute;
     top: 78px;
     left: 0;
     margin: 0;
