course: crappy content-editable approach to course title, desc, etc.  This is horrible and I'll change it, probably to use CodeMirror.

--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -5,5 +5,13 @@
     padding-right : 2em;
     padding-left  : 2em;
     background    : white;
- 
+
+}
+
+.salvus-course-editor-description {
+    color : #888;
+}
+
+.salvus-course-editor-location {
+    color : #888;
 }
