course: a tiny bit of not-very-exciting work...

--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -2,10 +2,8 @@
     overflow-y    : auto;
     overflow-x    : hidden;
     margin-bottom : 2em;
-    padding-right : 2em;
-    padding-left  : 2em;
     background    : white;
-
+    width         : 100%;
 }
 
 .salvus-course-editor-title {
