course -- snapshot of work in progress; mainly ability to add students and edit them

--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -1,3 +1,8 @@
+.salvus-course-student {
+    background : white;
+}
+
+
 .salvus-course-editor {
     overflow-y    : auto;
     overflow-x    : hidden;
