--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -23,3 +23,8 @@
 .salvus-course-editor-location {
     font-size:12pt;
 }
+
+.salvus-course-heading {
+    font-weight: bold;
+    color : #666;
+}
