courses: very rudimentary realtime sync of students

--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -26,5 +26,14 @@
 
 .salvus-course-heading {
     font-weight: bold;
+    padding-left: 1ex;
     color : #666;
+}
+
+.salvus-course-field {
+    padding-left: 1ex;
+}
+
+.salvus-course-field:hover {
+    background : #efe;
 }
