course: working on course projects -- mainly adding ability to create a student's project

--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -58,7 +58,7 @@
 .salvus-course-field {
     padding-left: 1ex;
     color:#555;
-    height: 3em;
+    /* /* height: 3em; */ */
     overflow-y: auto;
     /* border: 1px solid #ddd; */
 }
