--- a/salvus/page/course.css
+++ b/salvus/page/course.css
@@ -56,11 +56,12 @@
 }
 
 .salvus-course-field {
-    padding-left: 1ex;
     color:#555;
     /* /* height: 3em; */ */
     overflow-y: auto;
     /* border: 1px solid #ddd; */
+    padding-left: 1ex;
+    padding-right: 1ex;
 }
 
 .salvus-course-field:hover {
